--- a/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
+++ b/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
@@ -1,10 +1,16 @@
 = csi-secrets-store-provider-azure
 
+This chart installs driver to interface with Azure Key Vault provider.
+This driver enables:
+
+* getting secrets from Azure Key Vault
+* mounting secrets into Kubernetes pods
+
 == Requirements
 
 [width="100%",cols="45%,22%,33%",options="header",]
-|===
+|=======================================================================
 |Repository |Name |Version
 |https://raw.githubusercontent.com/Azure/secrets-store-csi-driver-provider-azure/master/charts
 |csi-secrets-store-provider-azure |0.0.17
-|===
+|=======================================================================
