--- a/docs/modules/ROOT/pages/references/applications/secrets-store-csi-driver.adoc
+++ b/docs/modules/ROOT/pages/references/applications/secrets-store-csi-driver.adoc
@@ -1,10 +1,13 @@
 = secrets-store-csi-driver
 
+This chart installs a driver enabling volume mounts for Secrets Store
+access.
+
 == Requirements
 
 [width="100%",cols="45%,22%,33%",options="header",]
-|===
+|=======================================================================
 |Repository |Name |Version
 |https://raw.githubusercontent.com/kubernetes-sigs/secrets-store-csi-driver/master/charts
 |secrets-store-csi-driver |0.0.16
-|===
+|=======================================================================
