--- a/docs/modules/ROOT/pages/references/applications/aad-pod-identity.adoc
+++ b/docs/modules/ROOT/pages/references/applications/aad-pod-identity.adoc
@@ -1,20 +1,23 @@
 = aad-pod-identity
 
+This chart enables Kubernetes applications to access cloud resources
+securely with Azure Active Directory (AAD).
+
 == Requirements
 
 [width="100%",cols="45%,22%,33%",options="header",]
-|===
+|=======================================================================
 |Repository |Name |Version
 |https://raw.githubusercontent.com/Azure/aad-pod-identity/master/charts
 |aad-pod-identity |3.0.3
-|===
+|=======================================================================
 
 == Values
 
 [width="100%",cols="16%,18%,27%,39%",options="header",]
-|===
+|=======================================================================
 |Key |Type |Default |Description
 |aad-pod-identity |object
 |`{"forceNameSpaced":true,"mic":{"prometheusPort":8888,"resources":{"limits":{"memory":"32Mi"},"requests":{"memory":"16Mi"}}},"nmi":{"prometheusPort":9090,"resources":{"limits":{"memory":"32Mi"},"requests":{"memory":"16Mi"}}}}`
 |Values passed to the add-pod-identity chart
-|===
+|=======================================================================
