--- a/docs/modules/ROOT/pages/references/applications/cert-manager.adoc
+++ b/docs/modules/ROOT/pages/references/applications/cert-manager.adoc
@@ -1,19 +1,26 @@
 = cert-manager
 
+This chart installs and configures cert-manager. cert-manager enables:
+
+* management and issuance of TLS certificates from various issuing
+sources
+* certificates validity
+* renewal of certificates at an appropriate time before expiry
+
 == Requirements
 
 [cols=",,",options="header",]
-|===
+|===============================================
 |Repository |Name |Version
 |https://charts.jetstack.io |cert-manager |1.1.1
-|===
+|===============================================
 
 == Values
 
 [width="100%",cols="16%,18%,27%,39%",options="header",]
-|===
+|=======================================================================
 |Key |Type |Default |Description
 |cert-manager |object
 |`{"installCRDs":true,"prometheus":{"servicemonitor":{"enabled":true}},"securityContext":{"fsGroup":999}}`
 |Values passed to the cert-manager chart
-|===
+|=======================================================================
