--- a/docs/modules/ROOT/pages/references/terraform_modules/eks/aws.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/eks/aws.adoc
@@ -237,7 +237,7 @@ object({
 [cols="a,a",options="header,autowidth"]
 |===
 |Name |Description
-|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |n/a
+|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |App of Apps values
 |[[output_argocd_auth_token]] <<output_argocd_auth_token,argocd_auth_token>> |The token to set in ARGOCD_AUTH_TOKEN environment variable.
 |[[output_argocd_server]] <<output_argocd_server,argocd_server>> |The URL of the ArgoCD server.
 |[[output_cluster_id]] <<output_cluster_id,cluster_id>> |The name/id of the EKS cluster. Will block on cluster creation until the cluster is really ready
