--- a/docs/modules/ROOT/pages/references/terraform_modules/openshift4/aws.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/openshift4/aws.adoc
@@ -127,7 +127,7 @@ object({
 [cols="a,a",options="header,autowidth"]
 |===
 |Name |Description
-|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |n/a
+|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |App of Apps values
 |[[output_argocd_auth_token]] <<output_argocd_auth_token,argocd_auth_token>> |The token to set in ARGOCD_AUTH_TOKEN environment variable.
 |[[output_argocd_server]] <<output_argocd_server,argocd_server>> |The URL of the ArgoCD server.
 |[[output_console_url]] <<output_console_url,console_url>> |n/a
