--- a/docs/modules/ROOT/pages/references/applications/argocd.adoc
+++ b/docs/modules/ROOT/pages/references/applications/argocd.adoc
@@ -10,10 +10,10 @@ enabled
 == Requirements
 
 [cols=",,",options="header",]
-|=====================================================
+|====================================================
 |Repository |Name |Version
-|https://argoproj.github.io/argo-helm |argo-cd |2.14.7
-|=====================================================
+|https://argoproj.github.io/argo-helm |argo-cd |3.0.0
+|====================================================
 
 == Values
 
@@ -21,6 +21,6 @@ enabled
 |=======================================================================
 |Key |Type |Default |Description
 |argo-cd |object
-|`{"controller":{"metrics":{"rules":{"enabled":true,"spec":[{"alert":"ArgoAppMissing","annotations":{"description":"ArgoCD has not reported any applications data for the past 15 minutes which means that it must be down or not functioning properly.  This needs to be resolved for this cloud to continue to maintain state.\n","summary":"[ArgoCD] No reported applications"},"expr":"absent(argocd_app_info)\n","for":"15m","labels":{"severity":"critical"}},{"alert":"ArgoAppNotSynced","annotations":{"description":"The application [{{`\{\{latexmath:[$labels.name}}`}} has not been synchronized for over 12 hours which means that the state of this cloud has drifted away from the state inside Git.\n","summary":"[{{`{{$]labels.name}}`}}] Application not synchronized"},"expr":"argocd_app_info{sync_status!=\"Synced\"} == 1\n","for":"12h","labels":{"severity":"warning"}}]},"serviceMonitor":{"enabled":true}}},"repoServer":{"metrics":{"serviceMonitor":{"enabled":true}}},"server":{"metrics":{"serviceMonitor":{"enabled":true}}}}`
+|`{"controller":{"metrics":{"rules":{"enabled":true,"spec":[{"alert":"ArgoAppMissing","annotations":{"description":"ArgoCD has not reported any applications data for the past 15 minutes which means that it must be down or not functioning properly.  This needs to be resolved for this cloud to continue to maintain state.\n","summary":"[ArgoCD] No reported applications"},"expr":"absent(argocd_app_info)\n","for":"15m","labels":{"severity":"critical"}},{"alert":"ArgoAppNotSynced","annotations":{"description":"The application [{{`\{\{latexmath:[$labels.name}}`}} has not been synchronized for over 12 hours which means that the state of this cloud has drifted away from the state inside Git.\n","summary":"[{{`{{$]labels.name}}`}}] Application not synchronized"},"expr":"argocd_app_info{sync_status!=\"Synced\"} == 1\n","for":"12h","labels":{"severity":"warning"}}]},"serviceMonitor":{"enabled":true}}},"repoServer":{"metrics":{"serviceMonitor":{"enabled":true}}},"server":{"metrics":{"serviceMonitor":{"enabled":true}},"volumeMounts":[{"mountPath":"/etc/ssl/certs/ca.crt","name":"certificate","subPath":"ca.crt"}],"volumes":[{"name":"certificate","secret":{"secretName":"argocd-tls"}}]}}`
 |Values passed to the argo-cd chart
 |=======================================================================
