--- a/docs/modules/ROOT/pages/references/terraform_modules/k3s/libvirt.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/k3s/libvirt.adoc
@@ -157,7 +157,7 @@ object({
 |===
 |Name |Description
 |[[output_admin_password]] <<output_admin_password,admin_password>> |n/a
-|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |n/a
+|[[output_app_of_apps_values]] <<output_app_of_apps_values,app_of_apps_values>> |App of Apps values
 |[[output_argocd_auth_token]] <<output_argocd_auth_token,argocd_auth_token>> |The token to set in ARGOCD_AUTH_TOKEN environment variable.
 |[[output_argocd_server]] <<output_argocd_server,argocd_server>> |The URL of the ArgoCD server.
 |[[output_base_domain]] <<output_base_domain,base_domain>> |n/a
