--- a/docs/modules/ROOT/pages/references/applications/argocd.adoc
+++ b/docs/modules/ROOT/pages/references/applications/argocd.adoc
@@ -20,7 +20,19 @@ enabled
 [width="100%",cols="16%,18%,27%,39%",options="header",]
 |=======================================================================
 |Key |Type |Default |Description
-|argo-cd |object
-|`{"controller":{"metrics":{"rules":{"enabled":true,"spec":[{"alert":"ArgoAppMissing","annotations":{"description":"ArgoCD has not reported any applications data for the past 15 minutes which means that it must be down or not functioning properly.  This needs to be resolved for this cloud to continue to maintain state.\n","summary":"[ArgoCD] No reported applications"},"expr":"absent(argocd_app_info)\n","for":"15m","labels":{"severity":"critical"}},{"alert":"ArgoAppNotSynced","annotations":{"description":"The application [{{`\{\{latexmath:[$labels.name}}`}} has not been synchronized for over 12 hours which means that the state of this cloud has drifted away from the state inside Git.\n","summary":"[{{`{{$]labels.name}}`}}] Application not synchronized"},"expr":"argocd_app_info{sync_status!=\"Synced\"} == 1\n","for":"12h","labels":{"severity":"warning"}}]},"serviceMonitor":{"enabled":true}}},"repoServer":{"metrics":{"serviceMonitor":{"enabled":true}}},"server":{"metrics":{"serviceMonitor":{"enabled":true}}}}`
-|Values passed to the argo-cd chart
+|argo-cd.controller.metrics.rules.enabled |bool |`true` |Specifies
+whether to enable Prometheus metrics rules of ArgoCD controller
+
+|argo-cd.controller.metrics.rules.spec |list
+|`[{"alert":"ArgoAppMissing","annotations":{"description":"ArgoCD has not reported any applications data for the past 15 minutes which means that it must be down or not functioning properly.  This needs to be resolved for this cloud to continue to maintain state.\n","summary":"[ArgoCD] No reported applications"},"expr":"absent(argocd_app_info)\n","for":"15m","labels":{"severity":"critical"}},{"alert":"ArgoAppNotSynced","annotations":{"description":"The application [{{`\{\{latexmath:[$labels.name}}`}} has not been synchronized for over 12 hours which means that the state of this cloud has drifted away from the state inside Git.\n","summary":"[{{`{{$]labels.name}}`}}] Application not synchronized"},"expr":"argocd_app_info{sync_status!=\"Synced\"} == 1\n","for":"12h","labels":{"severity":"warning"}}]`
+|Specifies Metric Rules of ArgoCD controller
+
+|argo-cd.controller.metrics.serviceMonitor.enabled |bool |`true`
+|Specifies whether to enable Prometheus metrics of ArgoCD controller
+
+|argo-cd.repoServer.metrics.serviceMonitor.enabled |bool |`true`
+|Specifies whether to enable Prometheus metrics of ArgoCD repoServer
+
+|argo-cd.server.metrics.serviceMonitor.enabled |bool |`true` |Specifies
+whether to enable Prometheus metrics of ArgoCD Server
 |=======================================================================
