--- a/docs/modules/ROOT/pages/references/applications/efs-provisioner.adoc
+++ b/docs/modules/ROOT/pages/references/applications/efs-provisioner.adoc
@@ -15,7 +15,8 @@ The chart installs provisioner enabling:
 == Values
 
 [cols=",,,",options="header",]
-|===============================
+|=======================================================================
 |Key |Type |Default |Description
-|efsProvisioner |object |`{}` |
-|===============================
+|efsProvisioner |object |`{}` |Values passed to the efs-provisioner
+chart
+|=======================================================================
