--- a/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
+++ b/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
@@ -1,5 +1,7 @@
 = csi-secrets-store-provider-azure
 
+NOTE: This chart is enabled only when deploying DevOps Stack to AKS.
+
 This chart installs driver to interface with Azure Key Vault provider.
 This driver enables:
 
