--- a/docs/modules/ROOT/pages/references/applications/aad-pod-identity.adoc
+++ b/docs/modules/ROOT/pages/references/applications/aad-pod-identity.adoc
@@ -1,7 +1,9 @@
 = aad-pod-identity
 
-This chart enables Kubernetes applications to access cloud resources
-securely with Azure Active Directory (AAD).
+NOTE: This chart is enabled only when deploying DevOps Stack to AKS.
+
+This chart enables assigning Azure Active Directory Identities to
+Kubernetes applications.
 
 == Requirements
 
