--- a/docs/modules/ROOT/pages/references/applications/apps.adoc
+++ b/docs/modules/ROOT/pages/references/applications/apps.adoc
@@ -1,5 +1,17 @@
 = apps
 
-This chart instantiates the
-https://argoproj.github.io/argo-cd/operator-manual/cluster-bootstrapping/#app-of-apps-pattern[App
-of Apps] as an ArgoCD application.
+This chart is a composition of subcharts. Each of the subcharts install
+one app of the `argocd/app-of-apps` (if parametrized as `enabled`).
+
+The following is a non-comprehensive list of the apps included:
+
+* argocd
+* cert-manager
+* loki-stack
+* kube-prometheus-stack
+* minio
+* keycloak
+
+Some of the apps are automatically disabled based on the type of cloud
+platform used. To enable/disable apps please see
+xref:ROOT:howtos/user_parameters.adoc[User Parameters]
