--- a/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
+++ b/docs/modules/ROOT/pages/references/applications/csi-secrets-store-provider-azure.adoc
@@ -2,7 +2,7 @@
 
 NOTE: This chart is enabled only when deploying DevOps Stack to AKS.
 
-This chart installs driver to interface with Azure Key Vault provider.
+This chart installs a driver to interface with Azure Key Vault provider.
 This driver enables:
 
 * getting secrets from Azure Key Vault
