--- a/docs/modules/ROOT/pages/references/applications/efs-provisioner.adoc
+++ b/docs/modules/ROOT/pages/references/applications/efs-provisioner.adoc
@@ -2,7 +2,7 @@
 
 NOTE: This chart is enabled only when deploying DevOps Stack to EKS.
 
-The chart installs provisioner enabling:
+The chart installs a provisioner enabling:
 
 * creation and management of `efs` StorageClass resources for dynamic
 PersistentVolumes in the kubernetes cluster
