--- a/docs/modules/ROOT/pages/references/applications/kube-prometheus-stack.adoc
+++ b/docs/modules/ROOT/pages/references/applications/kube-prometheus-stack.adoc
@@ -19,5 +19,5 @@ dashboards for monitoring Kubernetes cluster with Prometheus.
 |Key |Type |Default |Description
 |kube-prometheus-stack |object
 |`{"grafana":{"plugins":["grafana-piechart-panel"],"sidecar":{"dashboards":{"searchNamespace":"ALL"},"datasources":{"searchNamespace":"ALL"}}},"kubeControllerManager":{"enabled":false},"kubeEtcd":{"enabled":false},"kubeProxy":{"enabled":false},"kubeScheduler":{"enabled":false},"prometheus":{"additionalPodMonitors":[{"jobLabel":"traefik","name":"traefik","namespaceSelector":{"any":true},"podMetricsEndpoints":[{"path":"/metrics","port":"traefik","scheme":"http"}],"selector":{"matchLabels":{"app.kubernetes.io/instance":"traefik","app.kubernetes.io/name":"traefik"}}}],"prometheusSpec":{"podMonitorSelectorNilUsesHelmValues":false,"ruleSelectorNilUsesHelmValues":false,"serviceMonitorSelectorNilUsesHelmValues":false,"thanos":{"image":"quay.io/thanos/thanos:v0.15.0","version":"v0.15.0"}}},"prometheusOperator":{"admissionWebhooks":{"enabled":false},"manageCrds":false,"tls":{"enabled":false},"tlsProxy":{"enabled":false}},"thanosObjectStorageConfig":null}`
-|Values passed to the kube-prometheurs chart
+|Values passed to the kube-prometheus-stack chart
 |=======================================================================
