--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,6 +1,10 @@
 * xref:ROOT:index.adoc[Home]
 * Tutorials
-** xref:ROOT:getting_started.adoc[Getting Started]
+** xref:ROOT:tutorials/part_1.adoc[Part 1: Kubernetes cluster]
+** xref:ROOT:tutorials/part_2.adoc[Part 2: Hello Kubernetes]
+** xref:ROOT:tutorials/part_3.adoc[Part 3: Deploying an app]
+** xref:ROOT:tutorials/part_4.adoc[Part 4: Cont. Deployment]
+** xref:ROOT:tutorials/part_5.adoc[Part 5: Monitoring]
 * Howtos
 ** xref:ROOT:quickstart.adoc[Quickstarts]
 *** xref:ROOT:howtos/quickstart_eks.adoc[EKS]
@@ -18,9 +22,7 @@
 *** xref:ROOT:howtos/development.adoc[Development]
 *** xref:ROOT:howtos/write_documentation.adoc[Documentation]
 *** xref:ROOT:howtos/release.adoc[Release a new version]
-** Deploy Your App
-*** xref:ROOT:howtos/deploy_own_app.adoc[Deploy Your App]
-*** xref:ROOT:howtos/continuous_delivery_gitflow_workflow.adoc[Continous Deployment for a Gitflow Workflow]
+** xref:ROOT:howtos/continuous_delivery_gitflow_workflow.adoc[Continuous Deployment for a Gitflow Workflow]
 ** xref:ROOT:howtos/filebeat_logging.adoc[Filebeat logging]
 * References
 ** xref:ROOT:references/architecture.adoc[Architecture]
