--- a/docs/modules/ROOT/pages/tutorials/part_1.adoc
+++ b/docs/modules/ROOT/pages/tutorials/part_1.adoc
@@ -4,19 +4,21 @@ This documents walk you through the process of creating a cluster into your work
 
 == Creating the project
 
-answers: where should this code live?, what do you put in the terraform module? 
-ref: "How to gitlab/github pipeline" 
+answers: where should this code live?, what do you put in the terraform module?
+
+ref: How to gitlab/github pipeline? 
 
 == Instantiating the cluster
 
 demo: terraform apply, terraform output
-ref "What other things does the DevOps stack module can create for me?"  
-ref "What other things are normally created when creating your cluster?" link: e.g Azure postgreSQL terraform.io/docs.
+
+ref: What other things does the DevOps stack module can create for me?
+
+ref: What other things are normally created when creating your cluster? e.g Azure postgreSQL terraform.io/docs.
 
 == Ping Kubernetes
 
-demo: kubectl 
-demo: k9s 
+demo: kubectl get pods
 
 
 == Sections
