--- a/docs/modules/ROOT/pages/references/terraform_modules/sks/exoscale.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/sks/exoscale.adoc
@@ -30,9 +30,9 @@ The `sks/exoscale` Terraform module provides a way to install and configure:
 
 [cols="a,a,a",options="header,autowidth"]
 |===
-|Name |Source |Version
-|[[module_argocd]] <<module_argocd,argocd>> |../../argocd-helm |
-|[[module_cluster]] <<module_cluster,cluster>> |camptocamp/sks/exoscale |0.3.0
+|Name|Source|Version|
+|[[module_argocd]] <<module_argocd,argocd>>|../../argocd-helm|
+|[[module_cluster]] <<module_cluster,cluster>>|camptocamp/sks/exoscale|0.3.0
 |===
 
 == Resources
@@ -116,13 +116,7 @@ The `sks/exoscale` Terraform module provides a way to install and configure:
 |[[input_kubernetes_version]] <<input_kubernetes_version,kubernetes_version>>
 |Specify which Kubernetes release to use.
 |`string`
-|`"1.21.5"`
-|no
-
-|[[input_nodepools]] <<input_nodepools,nodepools>>
-|The SKS node pools to create.
-|`map(any)`
-|`null`
+|`"1.21.6"`
 |no
 
 |[[input_oidc]] <<input_oidc,oidc>>
@@ -157,20 +151,14 @@ object({
 |`{}`
 |no
 
-|[[input_router_nodepool]] <<input_router_nodepool,router_nodepool>>
-|The node to attach the NLB to.
-|`string`
-|`null`
-|no
-
 |[[input_target_revision]] <<input_target_revision,target_revision>>
 |The source target revision of ArgoCD's app of apps.
 |`string`
-|`"master"`
+|`"v0.49.0"`
 |no
 
 |[[input_wait_for_app_of_apps]] <<input_wait_for_app_of_apps,wait_for_app_of_apps>>
-|Allow to disable wait for app of apps
+|Allow to disable wait for app of apps.
 |`bool`
 |`true`
 |no
@@ -193,6 +181,7 @@ object({
 |[[output_argocd_server]] <<output_argocd_server,argocd_server>> |The URL of the ArgoCD server.
 |[[output_argocd_server_admin_password]] <<output_argocd_server_admin_password,argocd_server_admin_password>> |The ArgoCD admin password.
 |[[output_base_domain]] <<output_base_domain,base_domain>> |n/a
+|[[output_cluster_security_group_id]] <<output_cluster_security_group_id,cluster_security_group_id>> |Security group ID attached to the SKS nodepool instances.
 |[[output_grafana_admin_password]] <<output_grafana_admin_password,grafana_admin_password>> |The admin password for Grafana.
 |[[output_keycloak_admin_password]] <<output_keycloak_admin_password,keycloak_admin_password>> |The password of Keycloak's admin user.
 |[[output_keycloak_users]] <<output_keycloak_users,keycloak_users>> |n/a
