--- a/docs/modules/ROOT/pages/references/terraform_modules/k3s/docker.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/k3s/docker.adoc
@@ -145,18 +145,28 @@ The `k3s/docker` Terraform module provides a way to install and configure:
 
 |[[input_node_pools]] <<input_node_pools,node_pools>>
 |A list of nodes pools to be provisioned for the cluster.
-|
+Each node_pool should include at least a `name` key.
+Entry node_pools.0, if defined, acts as ingress node pool, else a default one will be created.
+See provider `terraform-aws-modules/eks/aws` workers_group_defaults for valid keys.
+
+Example:
 
 [source]
 ----
-list(object({
-    name        = string
-    node_count  = number
-    node_labels = list(string)
-    node_taints = list(string)
-  }))
+node_pools = [
+  {
+    name = infra
+  },
+  {
+    name = prod
+  },
+  {
+    name = int
+  }
+]
 ----
 
+|`list(any)`
 |
 
 [source]
