feat: add examples in node_pool descriptions

--- a/docs/modules/ROOT/pages/references/terraform_modules/eks/aws.adoc
+++ b/docs/modules/ROOT/pages/references/terraform_modules/eks/aws.adoc
@@ -232,8 +232,26 @@ list(object({
 
 |[[input_node_pools]] <<input_node_pools,node_pools>>
 |A list of nodes pools to be provisioned for the cluster.
+Each node_pool should include at least a `name` key.
 Entry node_pools.0, if defined, acts as ingress node pool, else a default one will be created.
 See provider `terraform-aws-modules/eks/aws` workers_group_defaults for valid keys.
+
+Example:
+
+[source]
+----
+node_pools = [
+  {
+    name = infra
+  },
+  {
+    name = prod
+  },
+  {
+    name = int
+  }
+]
+----
 
 |`list(any)`
 |`[]`
